# Jijv

./: README.md
devel/: .catkin  local_setup.sh
devel/include/dashgo_driver/: SrvInt32.h  SrvInt32Request.h  SrvInt32Response.h
devel/lib/dip_exp/: CircleDetect  exp1  exp2  exp3
devel/lib/dip_final/: image_publisher  joy_controller  main_controller  target_tracker
devel/lib/main_controller/: demo
devel/lib/pkgconfig/: DIP_exp.pc  dashgo_driver.pc  dip_exp.pc  dip_final.pc  main_controller.pc
devel/lib/python2.7/dist-packages/dashgo_driver/srv/: _SrvInt32.py
devel/share/DIP_exp/cmake/: DIP_expConfig.cmake
devel/share/common-lisp/ros/dashgo_driver/srv/: SrvInt32.lisp
devel/share/dashgo_driver/cmake/: dashgo_driver-msg-extras.cmake  dashgo_driverConfig.cmake
devel/share/dip_exp/cmake/: dip_expConfig.cmake
devel/share/dip_final/cmake/: dip_finalConfig.cmake
devel/share/gennodejs/ros/dashgo_driver/srv/: SrvInt32.js
devel/share/main_controller/cmake/: main_controllerConfig.cmake
devel/share/roseus/ros/dashgo_driver/: manifest.l
devel/share/roseus/ros/dashgo_driver/srv/: SrvInt32.l
src/dashgo_driver/config/: my_dashgo_params.yaml
src/dashgo_driver/launch/: driver_imu (copy).launch  driver_imu.launch
src/dip_exp/: CMakeLists.txt
src/dip_exp/include/: CannyProcessor.h  CircleDetector.h  DFT.h  DIP_common_include.h  GaussianFilterSDomain.h  HistAve.h  HoughTransformer.h  MorphologicalProcessor.h
src/dip_exp/src/: CircleDetect.cpp  exp1.cpp  exp2.cpp  exp3.cpp  exp4.cpp
src/dip_final/: CMakeLists.txt
src/dip_final/include/: SignalDetector.h
src/dip_final/scripts/: SSD_Mobilenet.py
src/dip_final/src/: image_publisher.cpp  joy_controller.cpp  main_controller.cpp  target_tracker.cpp
src/main_controller/: CMakeLists.txt  package.xml
src/main_controller/include/: FiniteStateMachine.h
src/main_controller/include/CommonInclude/: common_defination.h  common_parameters.h  workers_common_include.h
src/main_controller/include/GeometryComputer/: MotorCenterV2.h  WalkingGait.h
src/main_controller/include/MathTools/: PSO.h  RangeComputer.h
src/main_controller/include/MsgJar/: Communication.h  MsgJar.h
src/main_controller/include/StateWorkers/: StateWorker.h
src/main_controller/src/: demo.cpp
src/smartcar_description/: mainpage.dox  manifest.xml
src/smartcar_description/launch/: base_urdf_rviz.launch  gazebo_test.launch
src/smartcar_description/urdf/: smartcar.urdf
